Use actual Nullness Checker for nullness