@@ -27,8 +27,8 @@ ext.versions = [
         checkerFramework: "3.42.0-eisop3",
 ]
 
-
-sourceCompatibility = 11
+sourceCompatibility = 21
+targetCompatibility = 21
 def checkerframework_local = true  // Set this variable to [true] while using local version of checker framework.
 
 dependencies {
@@ -64,6 +64,30 @@ dependencies {
 
 tasks.withType(JavaCompile).all {
     options.compilerArgs.add("-Xlint:all")
+
+    options.compilerArgs += [
+            // These are required in Java 16+ because the --illegal-access option is set to deny
+            // by default.  None of these packages are accessed via reflection, so the module
+            // only needs to be exported, but not opened.
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+            '--add-exports',
+            'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+    ]
 }
 
 // Add `mavenLocal()` in `repositories`, then run `./gradlew publishToMavenLocal`
@@ -145,3 +169,4 @@ task printClasspath {
         println sourceSets.main.runtimeClasspath.asPath
     }
 }
+targetCompatibility = JavaVersion.VERSION_21
